--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -2,11 +2,362 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Galaxies</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"></link>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700"></link>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/css/perfect-scrollbar.css"></link>
+  <style>
+    body {
+  font-family: 'Raleway', sans-serif;
+}
+.nav-top {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 999999;
+  background-color: #6aa0d8;
+  height: 50px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+}
+.nav-top ul {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+.nav-top ul li {
+  color: rgba(255, 255, 255, 0.8);
+  height: 25px;
+  float: left;
+  line-height: 25px;
+  padding: 12.5px;
+}
+.nav-top ul li.menu-button-left {
+  float: left;
+}
+.nav-top ul li button {
+  background-color: #6aa0d8;
+  border-width: 0px;
+  color: rgba(255, 255, 255, 0.8);
+  padding: 0px 8px 0px 8px;
+}
+.nav-top ul li button:hover {
+  color: #ffffff;
+}
+.nav-top ul li b a {
+  color: rgba(255, 255, 255, 0.9);
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+.nav-top ul li b a:hover {
+  color: #ffffff;
+}
+.nav-top ul li form button[type=submit] {
+  background-color: #6aa0d8;
+  border-width: 0px;
+  color: rgba(255, 255, 255, 0.8);
+  padding: 0px 8px 0px 8px;
+}
+.nav-top ul li form button[type=submit]:hover {
+  color: #ffffff;
+}
+.nav-top ul li form input[type=text] {
+  background-color: #6aa0d8;
+  border-width: 0px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.8);
+  padding: 0px;
+}
+.nav-top ul li form input[type=text]:hover,
+.nav-top ul li form input[type=text]:active,
+.nav-top ul li form input[type=text]:focus {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+}
+.nav-top ul li form input[type=text]::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+.nav-top ul li form input[type=text]::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+.nav-top ul li form input[type=text]:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+.nav-top ul li form input[type=text]::placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+ul {
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+  line-height: 25px;
+}
+ul li.item {
+  padding: 10px;
+}
+ul li.item span.item-header {
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: bold;
+}
+ul li.item.table {
+  border-top: 1px solid #d3e5e9;
+  border-bottom: 1px solid #d3e5e9;
+}
+ul li.header {
+  padding: 10px;
+  border-bottom: 1px solid #d3e5e9;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: bold;
+}
+ul.menu-left {
+  overflow: hidden;
+  z-index: 999997;
+  background-color: #f5f9fa;
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  left: 0;
+  width: 0px;
+  border-right: 1px solid #d3e5e9;
+  -webkit-transition: 0.5s ease, opacity 0.2s ease;
+  transition: 0.5s ease, opacity 0.2s ease;
+  opacity: 0;
+}
+ul.menu-left li form {
+  padding: 10px;
+  border-bottom: 1px solid #d3e5e9;
+}
+ul.menu-left li form input[type=text] {
+  width: 145px;
+  background-color: transparent;
+  border-width: 0px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  color: rgba(255, 255, 255, 0.8);
+  padding: 0px;
+}
+ul.menu-left li form input[type=text]:hover,
+ul.menu-left li form input[type=text]:active,
+ul.menu-left li form input[type=text]:focus {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+}
+ul.menu-left li form input[type=text]::-webkit-input-placeholder {
+  color: rgba(0, 0, 0, 0.8);
+}
+ul.menu-left li form input[type=text]::-moz-placeholder {
+  color: rgba(0, 0, 0, 0.8);
+}
+ul.menu-left li form input[type=text]:-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0.8);
+}
+ul.menu-left li form input[type=text]::placeholder {
+  color: rgba(0, 0, 0, 0.8);
+}
+ul.menu-left li form button[type=submit] {
+  background-color: transparent;
+  border-width: 0px;
+  color: rgba(0, 0, 0, 0.8);
+  padding: 0px 8px 0px 8px;
+}
+ul.menu-left li form button[type=submit]:hover {
+  color: #000000;
+}
+ul.menu-right {
+  overflow: hidden;
+  z-index: 999997;
+  background-color: #f5f9fa;
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  border-left: 1px solid #d3e5e9;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+ul.menu-right li img {
+  width: 280px;
+}
+.page {
+  padding: 10px 10px 20px 10px;
+  overflow: hidden;
+  position: absolute;
+  left: 0px;
+  right: 300px;
+  top: 50px;
+  bottom: 0;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+table.hidden-large {
+  display: none;
+}
+body.shown-menu-left ul.menu-left {
+  width: 200px;
+  opacity: 1;
+}
+body.shown-menu-left .page {
+  left: 200px;
+}
+@media screen and (max-width: 700px) {
+  ul {
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+  }
+  ul.menu-right {
+    width: 0px;
+    opacity: 0;
+  }
+  .page {
+    padding: 10px 10px 20px 10px;
+    overflow: hidden;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 50px;
+    bottom: 0;
+  }
+  table {
+    width: 100%;
+  }
+  table.hidden-large {
+    display: block;
+  }
+  body.shown-menu-left .page {
+    left: 0px;
+  }
+  .hidden-small {
+    display: none;
+  }
+}
+@media screen and (min-width: 700px) {
+  .hidden-large {
+    display: none;
+  }
+}
+.ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y {
+  border-radius: 0px;
+}
+
+  </style>
 </head>
 
-<body>
+<body class="shown-menu-left">
+  <nav class="nav-top">
+    <ul>
+      <li class="menu-button-left">
+        <button id="show-menu-left"><i aria-hidden="true" class="fa fa-bars"></i></button>
+      </li>
+      <li><b><a href="#">Congeria Wiki</a></b></li>
+      <li class="hidden-small">
+        <form>
+          <input type="text" name="search" placeholder="Search"/>
+          <button type="submit"><i aria-hidden="true" class="fa fa-search"></i></button>
+        </form>
+      </li>
+    </ul>
+  </nav>
+  <ul class="menu-left col_ul">
+    <li class="hidden-large">
+      <form>
+        <input type="text" name="search" placeholder="Search"/>
+        <button type="submit"><i aria-hidden="true" class="fa fa-search"></i></button>
+      </form>
+    </li>
+    <li class="header"><span class="item-header no-sub">Contents</span></li>
+    <li class="item"><span class="item-header no-sub">Abstract</span></li>
+    <li class="item"><span class="item-header">Header</span>
+      <ul>
+        <li class="item"><span>Abstract</span>
+          <ul>
+            <li class="item">Item</li>
+          </ul>
+        </li>
+        <li class="item"><span>Abstract</span>
+          <ul>
+            <li class="item">Item</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+  <article class="page">
+    <h1>Planets</h1>
+    <table class="info hidden-large">
+      <tr>
+        <td><b>Type</b></td>
+        <td>Planets</td>
+      </tr>
+    </table>
+    <section>
+      <h2>Header 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+    <section>
+      <h2>Header 3</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+    <section>
+      <h2>Header 4</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+  </article>
+  <ul class="menu-right">
+    <li class="header">Planets</li>
+    <li class="item"><img src="https://placehold.it/350x150"/></li>
+    <li class="item table">
+      <table class="info">
+        <tr>
+          <td><b>Type</b></td>
+          <td>Planets</td>
+        </tr>
+      </table>
+    </li>
+  </ul>
+  <script src="https://use.fontawesome.com/f40007b752.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/js/perfect-scrollbar.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.min.js"></script>
+  <script>
+    (function() {
 
+  _.forEach([".page", ".menu-right", ".menu-left"], function(value) {
+    Ps.initialize(document.querySelector(value))
+  })
+
+  document.getElementById('show-menu-left').addEventListener('click', function() {
+    document.body.classList.toggle('shown-menu-left')
+  })
+
+  if (screen.width < 700) {
+    document.body.classList.remove('shown-menu-left')
+  }
+
+  var li_ul = document.querySelectorAll(".col_ul li  ul");
+  for (var i = 0; i < li_ul.length; i++) {
+    li_ul[i].style.display = "none"
+  }
+
+  var exp_li = document.querySelectorAll(".col_ul li > span");
+  for (var i = 0; i < exp_li.length; i++) {
+    exp_li[i].style.cursor = "pointer"
+    if (exp_li[i].classList.contains('no-sub')) {
+      // Solves the display error
+    } else {
+      exp_li[i].onclick = showul
+    }
+  }
+
+  function showul() {
+    let nextul = this.nextElementSibling;
+    if (nextul.style.display == "block")
+      nextul.style.display = "none"
+    else
+      nextul.style.display = "block"
+  }
+})();
+  </script>
 </body>
 
 </html>
