--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Galaxies</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"></link>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700"></link>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/css/perfect-scrollbar.css"></link>
-  <style>
+  <link rel="stylesheet" type='text/css' media='all' property='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" type='text/css' media='all' property='stylesheet' href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700">
+  <link rel="stylesheet" type='text/css' media='all' property='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/css/perfect-scrollbar.css">
+  <style type="text/css">
     body {
   font-family: 'Raleway', sans-serif;
 }
