--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -305,6 +305,7 @@ body.shown-menu-left .page {
   <script src="https://use.fontawesome.com/f40007b752.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/js/perfect-scrollbar.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.15.0/lodash.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/smart-underline/4.2.1/js/smart-underline.min.js"></script>
   <script>
     (function() {
       _.forEach([".page", ".menu-right", ".menu-left"], function(value) {
