--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -343,6 +343,9 @@ body.shown-menu-left .page {
           nextul.style.display = "block"
         }
       }
+      SmartUnderline.init({
+        "location": ""
+      })
     })();
   </script>
 </body>
