--- a/galaxy/index.html
+++ b/galaxy/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type='text/css' media='all' property='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" type='text/css' media='all' property='stylesheet' href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700">
   <link rel="stylesheet" type='text/css' media='all' property='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/css/perfect-scrollbar.css">
-  <link rel="stylesheet" type='text/css' media='all' property='stylesheet' href="/wiki/libraries/app.js">
+  <link rel="stylesheet" type='text/css' media='all' property='stylesheet' href="/wiki/libraries/app.css">
 </head>
 
 <body class="shown-menu-left">
